<resources>
    <string name="app_name">哔呦教练</string>
    <string name="setting">设置</string>
    <string name="perm_tip">
        当前应用缺少必要权限。\n请点击"设置"-"权限"-打开所需权限。\n最后点击两次后退按钮，即可返回。
    </string>
    <string name="ask_again">请给予应用必要权限，让程序可正常工作。</string>
    <string name="cancel">取消</string>
    <string name="alert_dialog_tishi1">温馨提示</string>
    <string name="alert_dialog_tishi2">解绑银行卡</string>
    <string name="alert_dialog_cached_cancel">取消</string>
    <string name="alert_dialog_cached_ok">确认</string>
    <string name="msg_camera_framework_bug">The camera is occupied or has no camera permission, please check</string>
    <string name="button_ok">Exit</string>
    <string name="scan_code">扫描二维码</string>
    <string name="open_flash">打开闪关灯</string>
    <string name="close_flash">关闭闪光灯</string>
    <string name="gallery">相册</string>
    <string name="scan_failed_tip">Scan image failed, please retry.</string>
    <string name="tips_1">“出门打开手机就能搜到附近美食，长了肉我也很心痛”\n在哔呦，无论出差旅游搬家换工作，都能快速预定周边健身房，心痛不如行动。</string>
    <string name="tips_2">“昨天问我的私教最擅长哪个领域，他说是销售” \n哔呦为每位教练设定星级成长系统，更有用户标签，帮你找到最合适的专业教练。</string>
    <string name="tips_3">““你看那家烤肉店，好像在勾引我……” \n先来哔呦定一场明天的燃脂团课，让你的及时享乐不再有罪恶感～</string>
    <string name="find">日程</string>
    <string name="date_table">时间表</string>
    <string name="message">消息</string>
    <string name="my_info">我的</string>
    <string name="edit_hint1">请输入手机号</string>
    <string name="edit_hint2">请输入密码</string>
    <string name="edit_hint3">请再次输入密码</string>
    <string name="edit_hint5">请输入验证码</string>
    <string name="edit_hint6">请输入新密码</string>
    <string name="edit_hint24">让用户知道他/她是否适合这项运动，能够减轻你的工作量哦～</string>
    <string name="edit_hint7">请再次确认密码</string>
    <string name="edit_hint28">手机号</string>
    <string name="edit_hint31">请输入旧密码</string>
    <string name="edit_hint32">请输入新密码</string>
    <string name="edit_hint33">请再次确认密码</string>
    <string name="edit_hint21">单行输入</string>
    <string name="edit_hint11">详细的课程简介能够吸引更多人来锻炼哦～</string>
    <string name="edit_hint12">让用户知道他/她是否适合这项运动，能够减轻你的工作量哦～</string>
    <string name="edit_hint25">锻炼也要保证安全哦～</string>
    <string name="alert_dialog_tishi16">团课名称不能为空！</string>
    <string name="alert_dialog_tishi18">课程介绍不能为空！</string>
    <string name="alert_dialog_tishi19">适合人群不能为空！</string>
    <string name="alert_dialog_tishi20">注意事项不能为空！</string>
    <string name="alert_dialog_tishi36">logo不能为空！</string>
    <string name="alert_dialog_tishi38">价格不能为空！</string>
    <string name="alert_dialog_tishi39">开始时间不能为空！</string>
    <string name="alert_dialog_tishi40">结束时间不能为空！</string>
    <string name="tv1">登 录</string>
    <string name="tv2">biu一下，遇见自己</string>
    <string name="tv3">密码登录</string>
    <string name="tv4">忘记密码</string>
    <string name="tv5">用户协议及隐私政策</string>
    <string name="tv6">发送验证码</string>
    <string name="tv7">不同意</string>
    <string name="tv8">同意</string>
    <string name="tv9">申请成为哔哟教练</string>
    <string name="tv10">哔哟让你：</string>
    <string name="tv11">不受场馆制约，人人都是你的潜在用户</string>
    <string name="tv12">教练不再做销售，我们帮你宣传自己</string>
    <string name="tv13">手机接单更方便，工作时间自己做主</string>
    <string name="tv14">团课教练</string>
    <string name="tv15">私人教练</string>
    <string name="tv16">您已选择申请团课教练，如后续想要变换或添加申请，可去我的-设置-教练类型管理中操作。</string>
    <string name="tv17">取消</string>
    <string name="tv18">确定</string>
    <string name="tv19">您已选择申请私人教练，如后续想要变换或添加申请，可去我的-设置-教练类型管理中操作。</string>
    <string name="tv20">密码设置</string>
    <string name="tv21">跳过</string>
    <string name="tv22">请输入6-18位同时包含字母、数字的密码</string>
    <string name="tv23">确认</string>
    <string name="tv24">教练入驻</string>
    <string name="tv25">上传您的身份证照片</string>
    <string name="tv26">身份证正面</string>
    <string name="tv27">身份证反面</string>
    <string name="tv28">拍摄照片要求</string>
    <string name="tv29">标准拍摄</string>
    <string name="tv30">边框缺失</string>
    <string name="tv31">照片模糊</string>
    <string name="tv32">照片曝光</string>
    <string name="tv33">姓名</string>
    <string name="tv34">请输入真实姓名</string>
    <string name="tv35">身份证号</string>
    <string name="tv36">请输入身份证号</string>
    <string name="tv37">性别</string>
    <string name="tv38">请选择</string>
    <string name="tv39">手机号</string>
    <string name="tv40">请输入手机号</string>
    <string name="tv41">所在城市</string>
    <string name="tv42">请选择城市</string>
    <string name="tv43">入行时间</string>
    <string name="tv44">最高学历</string>
    <string name="tv45">请输入毕业院校</string>
    <string name="tv46">下一步</string>
    <string name="tv47">拍照</string>
    <string name="tv48">选择图片</string>
    <string name="tv49">擅长课程</string>
    <string name="tv50">证书资质</string>
    <string name="tv51">注：</string>
    <string name="tv52">1. 上传有效期内您本人的专业证书，证书请完整显示姓名、证书名称、颁发日期及有效期。</string>
    <string name="tv53">2. 不超过20张证书。</string>
    <string name="tv54">授课图片</string>
    <string name="tv55">1. 上传照片需提现本人授课情况。</string>
    <string name="tv56">2. 不超过10张照片。</string>
    <string name="tv57">添加证书</string>
    <string name="tv58">证书类型</string>
    <string name="tv59">证书名称</string>
    <string name="tv60">请输入证书名称</string>
    <string name="tv61">获证时间</string>
    <string name="tv62">证书图片</string>
    <string name="tv63">可清晰看出证书姓名、有效期。</string>
    <string name="tv64">继续添加</string>
    <string name="tv65">完成</string>
    <string name="tv66">确认删除？</string>
    <string name="tv67">确定删除已经上传的资质证书吗？</string>
    <string name="tv68">提交审核</string>
    <string name="tv69">提交成功!</string>
    <string name="tv70">我们会在3个工作日内完成审核，请您耐心等待</string>
    <string name="tv71">抱歉！ 您提供的信息未能通过审核，请重新提交。</string>
    <string name="tv72">失败原因:</string>
    <string name="tv73">身份证件与手机号不匹配。</string>
    <string name="tv74">重新提交</string>
    <string name="tv75">签约并上架</string>
    <string name="tv76">日程</string>
    <string name="tv77">授课时间</string>
    <string name="tv78">授课场馆</string>
    <string name="tv79">课程管理</string>
    <string name="tv80">约课信息</string>
    <string name="tv81">更多</string>
    <string name="tv82">请向场馆出示二维码，扫描签到后即可上课。</string>
    <string name="tv83">授课时间</string>
    <string name="tv84">授课</string>
    <string name="tv85">设置授课时间</string>
    <string name="tv86">每天可授课时间</string>
    <string name="tv87">保存提交</string>
    <string name="tv88">设置休息时间</string>
    <string name="tv89">临时有事？来这里设置休息时间吧～</string>
    <string name="tv90">确认关闭授课？</string>
    <string name="tv92">关闭授课按钮后，除已约课程，后续您将不接受约课和场馆邀课</string>
    <string name="tv93">确认开启授课？</string>
    <string name="tv94">开启授课按钮后，根据您的可授课时间，将即时接受约课和场馆邀课。</string>
    <string name="tv95">约课信息</string>
    <string name="tv96">私教</string>
    <string name="tv97">团课</string>
    <string name="tv98">课程详情</string>
    <string name="tv99">团课名称</string>
    <string name="tv100">团课类型</string>
    <string name="tv101">团课房间</string>
    <string name="tv102">课程价格</string>
    <string name="tv103">课程时间</string>
    <string name="tv104">课程时长</string>
    <string name="tv105">课程人数</string>
    <string name="tv106">课程名称</string>
    <string name="tv107">用户昵称</string>
    <string name="tv108">填写日志</string>
    <string name="tv109">选择问题类型(必填)</string>
    <string name="tv110">产品建议 (功能建议/新的想法)</string>
    <string name="tv111" translatable="false">故障反馈 (功能不可用)</string>
    <string name="tv112">其他问题</string>
    <string name="tv113">请输入问题描述 (必填，10个字以上)</string>
    <string name="tv114">biu time</string>
    <string name="tv115">锻炼地点</string>
    <string name="tv120">运动前</string>
    <string name="tv121">运动后</string>
    <string name="tv122">体测数据</string>
    <string name="tv123">身高cm</string>
    <string name="tv124">体重 kg</string>
    <string name="tv125">课程内容</string>
    <string name="tv126">请记录课程内容</string>
    <string name="tv127">用户标签</string>
    <string name="tv128">给今天的用户贴个标签吧～</string>
    <string name="tv129">提交</string>
    <string name="tv130">身份证正面不能为空</string>
    <string name="tv131">身份证反面不能为空</string>
    <string name="tv132">姓名不能为空</string>
    <string name="tv133">身份证号不能为空</string>
    <string name="tv134">性别不能为空</string>
    <string name="tv135">手机号不能为空</string>
    <string name="tv136">地址不能为空</string>
    <string name="tv137">所在城市不能为空</string>
    <string name="tv138">最高学历不能为空</string>
    <string name="tv139">入行时间不能为空</string>
    <string name="tv140">证书不能为空</string>
    <string name="tv141">授课不能为空</string>
    <string name="tv142">擅长课程不能为空</string>
    <string name="tv143">技能标签不能为空</string>
    <string name="tv144">授课时间</string>
    <string name="tv145">(默认)</string>
    <string name="tv146">这里空空如也～</string>
    <string name="tv147">教练技能</string>
    <string name="tv148">请选择最高学历</string>
    <string name="tv149">身体数据不能为空</string>
    <string name="tv150">标签不能为空</string>
    <string name="tv151">课程内容不能为空</string>
    <string name="tv152">身份证格式不正确</string>
    <string name="tv153">身份证格式不正确</string>
    <string name="tv160">新版本正在努力的更新中，请稍等</string>
    <string name="tv167">选择</string>
    <string name="tv168">（最低限价¥40）</string>
    <string name="tv166">课程时长</string>
    <string name="tv169">房间类型</string>
    <string name="tv170">房间名称</string>
    <string name="tv171">训练目标</string>
    <string name="tv172">训练难度</string>
    <string name="tv173">团课时间</string>
    <string name="tv174">场馆</string>
    <string name="tv175">去邀请</string>
    <string name="tv176">团课循环</string>
    <string name="tv178">选择场馆</string>
    <string name="tv179">您还未选择场馆，课程信息将会保存在申请状态中</string>
    <string name="tv180">剪裁</string>
    <string name="tv185">图片上传失败~</string>
    <string name="tv186">确定退出创建团课吗？信息将不会保留</string>
    <string name="tv187">去申请</string>
    <string name="tv188">新增团课详情</string>
    <string name="tv189">再看看</string>
    <string name="tv190">不退出</string>
    <string name="tv191">保存</string>
    <string name="tv192">退出</string>
    <string name="update_title">更新提示</string>
    <string name="updatecontent">检测到有新版本，是否更新到最新版本。</string>
    <string name="updatecontent2">检测到有新版本，请更新到最新版本，否则无法使用。</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_manager">课程管理</string>
    <string name="class_name">课程名称</string>
    <string name="class_type">课程类型</string>
    <string name="class_price">课程价格</string>
    <string name="class_time">课程时长</string>
    <string name="class_jieshao">课程简介</string>
    <string name="class_shihe">适合人群</string>
    <string name="class_zhuyi">注意事项</string>
    <string name="tv_loading_tips">您已申请，请耐心等待场馆回应。\n或可至 我的-授权场馆 中继续申请。</string>
    <string name="team_room">团课房间</string>
    <string name="team_name">团课名称</string>
    <string name="team_type">团课类型</string>
    <string name="team_cycle">课程循环</string>
    <string name="team_date">课程时间</string>
    <string name="team_logo">封面图</string>
    <string name="team_class_img">授课图</string>
    <string name="jujue">拒绝</string>
    <string name="jieshou">接受</string>
    <string name="chongxin">重新申请</string>
    <string name="tv_shenqin">申请授权</string>
    <string name="tv_shouquan_tips">申请授权场馆说明：\n1. 私教课程需场馆授权，方可上架课程并在场馆授课，前端用户可选择已授权场馆进行上课。\n\n2.
        授权后，可在我的-授课场馆中解除授权。\n\n3. 教练或场馆单方解除授权，则需重新申请。
    </string>
    <string name="tv_service">服务时长</string>
    <string name="tv_tk">团课</string>
    <string name="tv_sj">私教</string>
    <string name="qianbao">钱包</string>
    <string name="class_cg">授课场馆</string>
    <string name="class_date">授课时间</string>
    <string name="issue_feed">问题反馈</string>
    <string name="setting_pwd">设置登陆密码</string>
    <string name="setting_sjh">修改手机号</string>
    <string name="tv_risk">电子合同</string>
    <string name="tv_xy">用户服务协议与免责声明</string>
    <string name="tv_quit">登出账户</string>
    <string name="tv_teacher_manager">教练类型管理</string>
    <string name="zhanghao_aq">安全管理</string>
    <string name="about">关于</string>
    <string name="tv116">修改提现密码</string>
    <string name="tv118">修改密码</string>
    <string name="tv_sum_sr">总收入</string>
    <string name="tv_day_sr">今日收入</string>
    <string name="write_info">填写银行卡信息</string>
    <string name="tv_card_type">卡类型</string>
    <string name="tv_binding">绑 定</string>
</resources>